fixed Q3